  @cache
  def result():
    res = expensive_function()
    return res
In this example, 'result' contains the data that results from
evaluation of the decorated function. The mechanism hinges on the
parameters in the Cache constructor, which must be chosen such that
identical parameters lead to identical evaluations. Cached data is
placed in $outdir/$scriptname/cache.

Further new are
  - new testcase: cylinderflow
  - added the TetrahedronElement
  - added util.suppress_output for silencing 3rd party tools
  - parallel.fork rudimentary parallelisation mechanism

This release features contributions from Rody van Tuijl, Clemens
Verhoosel, Timo van Opstal, and Xunxun Wu.

* * *

Finity 13.01.08 --- major enhancements

Fixed:

  - Sparse matrix in place addition: gave erroneous results.
  - Function spaces now support polynomial degree=1.
  - Special case binary operations (zero addition, etc) retain shape.

New:

Fine grained modules. Contents of util are distributed over util,
core, numeric. Core contains components that do not depend on any
other finity modules. Numeric hosts numpy operations and acts as an
interace for NumpyExtra. Current modules are:

  core      log       parallel
  element   matrix    plot
  function  mesh      topology
  green     numeric   util

Deprecated NumpyExtra. Numeric module now takes c-methods from
_numeric.so in the same directory. Methods in _numeric are stripped
down to the minimum with pre and post processing possibly required in
numeric.py.

Get, GetItem, Align. New ArrayFunc objects replace former GetItem for
indexing one item (a[i]), indexing a slice (a[i:j]), and introducing
new axes (a[_]) and/or reordering axes (a.T), respectively. The reason
is twofold. 1. These three operations are fundamentally different and
interact with matrix operations in different ways. 2. Separating the
operations allows one to push Get towards the branches of the function
tree, reducing work, and Align towards the root, increasing likelyhood